@@ -82,6 +82,7 @@
     <Compile Include="Tags\UnlessElseTests.cs" />
     <Compile Include="Tags\StandardTagTests.cs" />
     <Compile Include="TemplateTests.cs" />
+    <Compile Include="Util\StrFTimeTests.cs" />
     <Compile Include="VariableResolutionTests.cs" />
     <Compile Include="VariableTests.cs" />
   </ItemGroup>
