@@ -1,3 +1,4 @@
+- Added %e date format code (thanks Paul Jenkins)
 - Added split filter
 
 v1.6.1 - 2011-09-30
